kubernetes/argocd/manifests/gateway/traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/instance: traefik-traefik
  ports:
    - name: dashboard
      port: 9000
      targetPort: 9000
      protocol: TCP
