kubernetes/argocd/manifests/gateway/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: traefik
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/managed-by: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - argocd.techdufus.com
  rules:
    - backendRefs:
        - name: argocd-server
          namespace: argocd
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd-route-grant
  namespace: argocd
  labels:
    app.kubernetes.io/name: argocd
    app.kubernetes.io/component: rbac
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/managed-by: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: argocd-server
