kubernetes/argocd/manifests/gateway/homarr-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homarr-route
  namespace: traefik
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: homarr
    app.kubernetes.io/managed-by: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - home.techdufus.com
  rules:
    - backendRefs:
        - name: homarr
          namespace: homarr
          port: 7575
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: homarr-route-grant
  namespace: homarr
  labels:
    app.kubernetes.io/name: homarr
    app.kubernetes.io/component: rbac
    app.kubernetes.io/part-of: homarr
    app.kubernetes.io/managed-by: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: homarr
