kubernetes/argocd/manifests/gateway/homepage-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage-route
  namespace: traefik
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - home.techdufus.com
  rules:
    - backendRefs:
        - name: homepage
          namespace: homepage
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: homepage-route-grant
  namespace: homepage
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/component: rbac
    app.kubernetes.io/part-of: homepage
    app.kubernetes.io/managed-by: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: homepage
