kubernetes/argocd/manifests/gateway/immich-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich-route
  namespace: traefik
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: route
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: argocd
spec:
  parentRefs:
    - name: lab-gateway
      namespace: traefik
  hostnames:
    - photos.techdufus.com
  rules:
    - backendRefs:
        - name: immich-server
          namespace: immich
          port: 2283
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: immich-route-grant
  namespace: immich
  labels:
    app.kubernetes.io/name: immich
    app.kubernetes.io/component: rbac
    app.kubernetes.io/part-of: immich
    app.kubernetes.io/managed-by: argocd
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: traefik
  to:
    - group: ""
      kind: Service
      name: immich-server
